--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "js-yaml": "^4.1.0",
     "lodash": "^4.17.21",
     "os-locale": "^5.0.0",
+    "passport-strategy": "^1.0.0",
     "pem-ts": "^3.0.1",
     "phone": "^3.1.30",
     "prism-react-renderer": "^1.3.5",
@@ -116,6 +117,7 @@
     "@types/js-yaml": "^4.0.5",
     "@types/json-schema": "^7.0.11",
     "@types/node": "^18.11.10",
+    "@types/passport-strategy": "^0.2.35",
     "@types/safe-regex": "^1.1.4",
     "@types/safe-timers": "^1.1.0",
     "@types/semver": "^7.3.13",
