Create example X.500 integration web app

--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "asn1-ts": "^7.0.17",
     "basic-ftp": "^5.0.2",
     "bluebird": "^3.7.2",
+    "body-parser": "^1.20.1",
     "chalk": "^5.1.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
@@ -68,6 +69,9 @@
     "date-fns": "^2.29.3",
     "email-addresses": "^5.0.0",
     "escape-html": "^1.0.3",
+    "express": "^4.18.2",
+    "express-handlebars": "^6.0.6",
+    "express-session": "^1.17.3",
     "fast-levenshtein": "^3.0.0",
     "flat": "^5.0.2",
     "hbs": "^4.2.0",
@@ -78,6 +82,8 @@
     "js-yaml": "^4.1.0",
     "lodash": "^4.17.21",
     "os-locale": "^5.0.0",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
     "passport-strategy": "^1.0.0",
     "pem-ts": "^3.0.1",
     "phone": "^3.1.30",
@@ -88,6 +94,7 @@
     "rxjs": "^7.5.6",
     "safe-timers": "1.1.0",
     "semver": "^7.3.7",
+    "serve-static": "^1.15.0",
     "swagger-ui-express": "^4.5.0",
     "tiny-typed-emitter": "^2.1.0",
     "tslib": "^2.4.0",
@@ -111,12 +118,14 @@
     "@types/csurf": "^1.11.2",
     "@types/escape-html": "^1.0.2",
     "@types/express": "^4.17.14",
+    "@types/express-session": "^1.17.5",
     "@types/fast-levenshtein": "^0.0.2",
     "@types/flat": "^5.0.2",
     "@types/jest": "27.4.1",
     "@types/js-yaml": "^4.0.5",
     "@types/json-schema": "^7.0.11",
     "@types/node": "^18.11.10",
+    "@types/passport-local": "^1.0.34",
     "@types/passport-strategy": "^0.2.35",
     "@types/safe-regex": "^1.1.4",
     "@types/safe-timers": "^1.1.0",
