--- a/.github/workflows/meerkat.yml
+++ b/.github/workflows/meerkat.yml
@@ -217,7 +217,7 @@ jobs:
         timeout-minutes: 10
         with:
           push: true
-          tags: ghcr.io/wildboar-software/meerkat-dsa:latest,ghcr.io/wildboar-software/meerkat-dsa:${{ env.PUBLISHING_MEERKAT_VERSION }},ghcr.io/wildboar-software/meerkat-dsa:${{ env.GITHUB_SHA }}
+          tags: ghcr.io/wildboar-software/meerkat-dsa:latest,ghcr.io/wildboar-software/meerkat-dsa:${{ env.PUBLISHING_MEERKAT_VERSION }}
           context: ./
           file: ./meerkat.dockerfile
 
