--- a/k8s/charts/meerkat-dsa/templates/deployment.yaml
+++ b/k8s/charts/meerkat-dsa/templates/deployment.yaml
@@ -451,6 +451,12 @@ spec:
                   name: {{ include "meerkat-dsa.fullname" . }}-config
                   key: min_transfer_speed_bytes_per_minute
                   optional: true
+            - name: MEERKAT_MRU_VERTEX_TTL
+              valueFrom:
+                configMapKeyRef:
+                  name: {{ include "meerkat-dsa.fullname" . }}-config
+                  key: mru_vertex_ttl
+                  optional: true
             - name: MEERKAT_MY_ACCESS_POINT_NSAPS
               valueFrom:
                 configMapKeyRef:
