Lower log level in demo environment to speed up pipelines

--- a/.env
+++ b/.env
@@ -87,3 +87,4 @@ MEERKAT_DISABLE_ITOT_CHAINING=0
 MEERKAT_ITOTS_PORT=11102
 # MEERKAT_TEST_HOST=dsa01.test.mkdemo.wildboar.software
 # MEERKAT_TEST_PORT=4632
+MEERKAT_LOG_LEVEL=debug
