--- a/.github/workflows/meerkat.yml
+++ b/.github/workflows/meerkat.yml
@@ -547,13 +547,16 @@ jobs:
         run: echo "${{ env.VALUES_OVERRIDE }}" > values_override.yaml
         timeout-minutes: 1
       - name: Deploy Meerkat DSA via Helm
+        # Set log_level to "warn" because logging slows down Meerkat DSA
+        # considerably, and the logs from the test instance are so chaotic that
+        # they are basically useless.
         run: |
           helm install meerkat-dsa-test ${{ env.CHART_REPO }}/${{ env.CHART_NAME }} \
             -f values_override.yaml \
             --set fullnameOverride=meerkat-test \
             --set service.type=LoadBalancer \
             --set adminService.type=LoadBalancer \
-            --set log_level=debug \
+            --set log_level=warn \
             --set "my_access_point_nsaps={idm://dsa01.test.${{ env.ZONE }}:4632,ldap://dsa01.test.${{ env.ZONE }}:389}" \
             --set min_auth_level_for_chaining=0 \
             --set min_auth_local_qualifier_for_chaining=0 \
@@ -761,6 +764,8 @@ jobs:
       - name: Create Values Override File
         run: echo "${{ env.VALUES_OVERRIDE }}" > values_override.yaml
       - name: Deploy Meerkat DSA via Helm
+        # Set log_level to "info" because logging slows down Meerkat DSA
+        # considerably, even though it would be nice to have more output.
         run: |
           helm install meerkat-dsa-${{ matrix.dmd }} ${{ env.CHART_REPO }}/${{ env.CHART_NAME }} \
             -f values_override.yaml \
@@ -769,7 +774,7 @@ jobs:
             --set fullnameOverride=meerkat-${{ matrix.dmd }} \
             --set service.type=LoadBalancer \
             --set adminService.type=LoadBalancer \
-            --set log_level=debug \
+            --set log_level=info \
             --set "my_access_point_nsaps={idms://dsa01.${{ matrix.dmd }}.${{ env.ZONE }}:44632,idm://dsa01.${{ matrix.dmd }}.${{ env.ZONE }}:4632,ldaps://dsa01.${{ matrix.dmd }}.${{ env.ZONE }}:636,ldap://dsa01.${{ matrix.dmd }}.${{ env.ZONE }}:389}" \
             --set min_auth_level_for_chaining=0 \
             --set min_auth_local_qualifier_for_chaining=0 \
