X.511 remote password checking

--- a/.github/workflows/meerkat.yml
+++ b/.github/workflows/meerkat.yml
@@ -800,6 +800,7 @@ jobs:
             --set signing_required_for_chaining=false \
             --set tcp_timeout_in_seconds=300 \
             --set min_transfer_speed_bytes_per_minute=10 \
+            --set remote_pwd_time_limit=15 \
             --atomic \
             --namespace=${{ env.NAMESPACE }}
       - name: Wait 30 Seconds for Public IP to be Allocated
