--- a/k8s/charts/meerkat-dsa/values.yaml
+++ b/k8s/charts/meerkat-dsa/values.yaml
@@ -172,6 +172,7 @@ ob_auto_accept: false
 open_top_level: false
 # private_key_engine: pkcs11
 prohibit_chaining: false
+remote_pwd_time_limit: 0
 reveal_user_pwd: false
 src_parallelism: 0
 # scvp_attr_cert_checks:
