--- a/libs/parity-schema/project.json
+++ b/libs/parity-schema/project.json
@@ -1,15 +1,18 @@
 {
+    "name": "parity-schema",
     "$schema": "../../node_modules/nx/schemas/project-schema.json",
     "sourceRoot": "libs/parity-schema/src",
     "projectType": "library",
     "targets": {
         "build": {
-            "executor": "@nrwl/node:webpack",
+            "executor": "@nrwl/webpack:webpack",
             "outputs": ["{options.outputPath}"],
             "options": {
                 "outputPath": "dist/libs/parity-schema",
                 "main": "libs/parity-schema/src/index.ts",
-                "tsConfig": "libs/parity-schema/tsconfig.lib.json"
+                "tsConfig": "libs/parity-schema/tsconfig.lib.json",
+                "target": "node",
+                "compiler": "tsc"
             },
             "configurations": {
                 "production": {
@@ -28,7 +31,7 @@
         },
         "test": {
             "executor": "@nrwl/jest:jest",
-            "outputs": ["coverage/libs/parity-schema"],
+            "outputs": ["{workspaceRoot}/coverage/libs/parity-schema"],
             "options": {
                 "jestConfig": "libs/parity-schema/jest.config.ts",
                 "passWithNoTests": true
