--- a/libs/rose-transport/project.json
+++ b/libs/rose-transport/project.json
@@ -1,4 +1,5 @@
 {
+    "name": "rose-transport",
     "$schema": "../../node_modules/nx/schemas/project-schema.json",
     "sourceRoot": "libs/rose-transport/src",
     "projectType": "library",
@@ -14,7 +15,7 @@
             }
         },
         "publish": {
-            "executor": "@nrwl/workspace:run-commands",
+            "executor": "nx:run-commands",
             "options": {
                 "command": "node tools/scripts/publish.mjs rose-transport {args.ver} {args.tag}"
             },
@@ -34,7 +35,7 @@
         },
         "test": {
             "executor": "@nrwl/jest:jest",
-            "outputs": ["coverage/libs/rose-transport"],
+            "outputs": ["{workspaceRoot}/coverage/libs/rose-transport"],
             "options": {
                 "jestConfig": "libs/rose-transport/jest.config.ts",
                 "passWithNoTests": true
