--- a/package.json
+++ b/package.json
@@ -96,16 +96,16 @@
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "2.2.0",
-    "@nrwl/cli": "14.5.4",
-    "@nrwl/eslint-plugin-nx": "14.5.4",
-    "@nrwl/jest": "14.5.4",
-    "@nrwl/js": "14.5.4",
-    "@nrwl/linter": "14.5.4",
-    "@nrwl/node": "14.5.4",
-    "@nrwl/nx-cloud": "14.5.4",
-    "@nrwl/workspace": "14.5.4",
+    "@nrwl/cli": "15.5.1",
+    "@nrwl/eslint-plugin-nx": "15.5.1",
+    "@nrwl/jest": "15.5.1",
+    "@nrwl/js": "15.5.1",
+    "@nrwl/linter": "15.5.1",
+    "@nrwl/node": "15.5.1",
+    "@nrwl/nx-cloud": "15.0.2",
+    "@nrwl/workspace": "15.5.1",
     "@nx-go/nx-go": "^2.7.0",
-    "@nx-plus/docusaurus": "^14.1.0",
+    "@nx-plus/docusaurus": "15.0.0-rc.0",
     "@types/bluebird": "^3.5.38",
     "@types/cookie-parser": "^1.4.3",
     "@types/csurf": "^1.11.2",
@@ -113,30 +113,30 @@
     "@types/express": "^4.17.14",
     "@types/fast-levenshtein": "^0.0.2",
     "@types/flat": "^5.0.2",
-    "@types/jest": "27.4.1",
+    "@types/jest": "28.1.8",
     "@types/js-yaml": "^4.0.5",
     "@types/json-schema": "^7.0.11",
-    "@types/node": "^18.11.10",
+    "@types/node": "18.7.1",
     "@types/safe-regex": "^1.1.4",
     "@types/safe-timers": "^1.1.0",
     "@types/semver": "^7.3.13",
     "@types/yargs": "^17.0.15",
-    "@typescript-eslint/eslint-plugin": "5.32.0",
-    "@typescript-eslint/parser": "5.32.0",
+    "@typescript-eslint/eslint-plugin": "5.48.1",
+    "@typescript-eslint/parser": "5.48.1",
     "dotenv": "^16.0.3",
     "eslint": "8.21.0",
     "eslint-config-prettier": "8.5.0",
-    "jest": "27.5.1",
+    "jest": "28.1.3",
     "json-schema-to-typescript": "^11.0.2",
-    "nx": "14.5.4",
+    "nx": "15.5.1",
     "prettier": "2.7.1",
     "prettier-plugin-organize-imports": "^3.2.1",
     "prisma": "^4.8.1",
     "sloc": "^0.2.1",
-    "ts-jest": "27.1.4",
+    "ts-jest": "28.0.8",
     "ts-node": "10.9.1",
     "tslib": "^2.3.1",
-    "typescript": "4.7.4",
+    "typescript": "4.8.4",
     "webpack-merge": "^5.8.0"
   }
 }
