Fix missing access point bug

--- a/libs/x500-client-ts/tsconfig.json
+++ b/libs/x500-client-ts/tsconfig.json
@@ -7,7 +7,12 @@
         "noImplicitOverride": true,
         "noPropertyAccessFromIndexSignature": true,
         "noImplicitReturns": true,
-        "noFallthroughCasesInSwitch": true
+        "noFallthroughCasesInSwitch": true,
+        "strictNullChecks": true,
+        "strictBindCallApply": true,
+        "strictFunctionTypes": true,
+        "strictPropertyInitialization": true,
+        "alwaysStrict": true
     },
     "files": [],
     "include": [],
